# sam-3d-objects

./: pyproject.toml  requirements.txt
notebook/: inference.py
sam3d_objects/model/backbone/tdfy_dit/utils/: postprocessing_utils.py  render_utils.py
sam3d_objects/pipeline/: layout_post_optimization_utils.py
sam3d_objects/pipeline/utils/: pointmap.py
sam3d_objects/utils/utils3d/: __init__.py
sam3d_objects/utils/utils3d/numpy/: quadmesh.py
sam3d_objects/utils/visualization/: image_mesh.py
